# StatView

./: .gitignore  ALL_BUILD.vcxproj  CMakeLists.txt  CMakePresets.json  LICENSE .md  README.md  StatView.cpp  StatView.h  StatView.sln  StatView.vcxproj  ZERO_CHECK.vcxproj  imgui.ini  install.bat
src/: StatView.cpp  Window.cpp  Window.h
src/Gui/: Drawer.h  GuiDrawer.cpp  GuiDrawer.h  IDrawer.h
src/Gui/Guis/: AdbUtilityGui.cpp  AdbUtilityGui.h  HelloWorldGui.cpp  HelloWorldGui.h  HomePageGui.cpp  HomePageGui.h  ImGuiDemoGui.cpp  ImGuiDemoGui.h  MenuBarGui.cpp  MenuBarGui.h  PerformanceGraphGui.cpp  PerformanceGraphGui.h  ProgressGui.cpp  ProgressGui.h  StatsGui.cpp  StatsGui.h  TabGui.cpp  TabGui.h
src/Gui/Guis/Adb/: AdbCaptureGui.cpp  AdbCaptureGui.h  AdbLiveGui.cpp  AdbLiveGui.h
src/Gui/Guis/GraphTable/: PerformanceGraphGui.cpp  PerformanceGraphGui.h  StatsGui.cpp  StatsGui.h
src/Gui/Guis/PerformanceGraph/: PerformanceGraphGui.cpp  PerformanceGraphGui.h
src/Gui/Guis/PerformanceGraph/Elements/: PerformanceGraphElement.cpp  PerformanceGraphElement.h  PerformanceStatsElement.cpp  PerformanceStatsElement.h  StatisticSelectionElement.cpp  StatisticSelectionElement.h
src/Gui/ImGui/: BufferingBar.cpp  HyperLink.cpp  ImGuiExtensions.h  LoadingText.cpp  Spinner.cpp
src/Stats/: LogParser.cpp  LogParser.h  PerformanceStats.cpp  PerformanceStats.h  StatisticUtility.cpp  StatisticUtility.h
src/Stats/Captured/: Statistic.cpp  Statistic.h  StatisticGroup.cpp  StatisticGroup.h
src/Stats/Parsing/: IParser.h  LogParser.cpp  LogParser.h  VrApiStatistics.cpp  VrApiStatistics.h
src/Stats/Parsing/Parsers/: LogParserVrApi.cpp  LogParserVrApi.h
src/Utility/: PathUtility.h  Random.h  RandomUtility.h  StringUtility.h  Timer.h
src/Utility/Adb/: AdbLive.cpp  AdbLive.h  AdbUtility.cpp  AdbUtility.h  AdbValidation.cpp  AdbValidation.h  AdbVrApiCapture.cpp  AdbVrApiCapture.h  DeviceInfo.h
src/Utility/File/: FileUtility.cpp  FileUtility.h
src/Utility/Progress/: ProgressHandler.cpp  ProgressHandler.h  ProgressItem.h
src/Utility/Update/: UpdateHandler.cpp  UpdateHandler.h
src/Utility/Update/Implementations/: IDraw.h  IEarlyUpdate.h  ILateUpdate.h  IUpdate.h
